// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OrderList /> check how renders should render everything correctly with one item and type SELL_HISTORY 1`] = `
<DocumentFragment>
  <div
    class="sc-bdfBwQ VfWiw"
  >
    <div
      class="sc-gsTCUz bKCzp"
    >
      <div
        class="sc-eCssSg gaIytV"
        direction="row"
        spacing="3"
        width="100%"
        wrap="nowrap"
      >
        <span
          class="sc-pFZIQ bMGSTl"
          color=""
          display="inline-block"
          overflow="visible"
          size="3"
          spacing="0px"
          transform=""
        >
          <span>
            buyer 
          </span>
          <a
            data-testid="OrderList-user-link"
          >
            <span
              class="sc-dlfnbm cJaBxc"
            >
              buyerUser
            </span>
          </a>
        </span>
        <span
          class="sc-pFZIQ cMioVI"
          color=""
          display="inline-block"
          overflow="visible"
          size="2"
          spacing="0px"
          transform=""
        >
          17 Feb 2021, 02:53
        </span>
      </div>
      <div
        class="sc-eCssSg gnpzZR sc-jSgupP iyBJDZ"
        data-testid="TransactionAndOrderProdItem"
        direction="row"
        spacing="2"
        width="100%"
        wrap="nowrap"
      >
        <a
          data-testid="TransactionAndOrderProdItem-product-link-photo"
        >
          <div
            class="sc-eCssSg cldNiM sc-fubCfw jcXzpB"
            data-testid="ProductThumbnail"
            direction="row"
            height="5"
            spacing=""
            width="5"
            wrap="nowrap"
          >
            <img
              alt="product1"
              data-testid="ProductThumbnail-img"
              src="http://192.168.1.109:4000/orders/o1/p1/photo"
            />
          </div>
        </a>
        <div
          class="sc-gKsewC cREdUd"
        >
          <span
            class="name"
          >
            <a
              data-testid="TransactionAndOrderProdItem-product-link-name"
            >
              product1
            </a>
          </span>
          <div
            class="sc-eCssSg bOnlJe sc-iBPRYJ dOEiXN"
            direction="row"
            spacing=""
            width="100%"
            wrap="nowrap"
          >
            <span
              class="sc-pFZIQ eBEFzI"
              color="#777"
              display="inline-block"
              overflow="visible"
              size="2"
              spacing="0px"
              transform=""
            >
              2 x $6.40
            </span>
            <span
              class="sc-pFZIQ iisBUL"
              color=""
              display="inline-block"
              overflow="visible"
              size="4"
              spacing="0px"
              transform=""
            >
              $12.80
            </span>
          </div>
        </div>
      </div>
      <div
        class="sc-eCssSg fEZMEF"
        direction="row"
        spacing="3"
        width="100%"
        wrap="nowrap"
      >
        <a
          data-testid="OrderList-order-details-link"
        >
          <button
            class="sc-jrAGrp iifaoN"
            color="blue"
            type="button"
          >
            details
          </button>
        </a>
        <div>
          <span
            class="sc-pFZIQ tbjjM"
            color="#777"
            display="inline-block"
            overflow="visible"
            size="3"
            spacing="1px"
            transform=""
          >
            TOTAL
          </span>
          <span
            class="sc-pFZIQ ftfIUZ"
            color=""
            display="inline-block"
            overflow="visible"
            size="5"
            spacing="0px"
            transform=""
          >
            $12.80
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<OrderList /> check how renders should render everything correctly with two items and type PLACED_ORDERS 1`] = `
<DocumentFragment>
  <div
    class="sc-bdfBwQ VfWiw"
  >
    <div
      class="sc-gsTCUz bKCzp"
    >
      <div
        class="sc-eCssSg gaIytV"
        direction="row"
        spacing="3"
        width="100%"
        wrap="nowrap"
      >
        <span
          class="sc-pFZIQ bMGSTl"
          color=""
          display="inline-block"
          overflow="visible"
          size="3"
          spacing="0px"
          transform=""
        >
          <span>
            seller 
          </span>
          <a
            data-testid="OrderList-user-link"
          >
            <span
              class="sc-dlfnbm cJaBxc"
            >
              sellerUser
            </span>
          </a>
        </span>
        <span
          class="sc-pFZIQ cMioVI"
          color=""
          display="inline-block"
          overflow="visible"
          size="2"
          spacing="0px"
          transform=""
        >
          8 Jan 2021, 12:08
        </span>
      </div>
      <div
        class="sc-eCssSg gnpzZR sc-jSgupP iyBJDZ"
        data-testid="TransactionAndOrderProdItem"
        direction="row"
        spacing="2"
        width="100%"
        wrap="nowrap"
      >
        <a
          data-testid="TransactionAndOrderProdItem-product-link-photo"
        >
          <div
            class="sc-eCssSg cldNiM sc-fubCfw jcXzpB"
            data-testid="ProductThumbnail"
            direction="row"
            height="5"
            spacing=""
            width="5"
            wrap="nowrap"
          >
            <img
              alt="product1"
              data-testid="ProductThumbnail-img"
              src="http://192.168.1.109:4000/orders/o1/p1/photo"
            />
          </div>
        </a>
        <div
          class="sc-gKsewC cREdUd"
        >
          <span
            class="name"
          >
            <a
              data-testid="TransactionAndOrderProdItem-product-link-name"
            >
              product1
            </a>
          </span>
          <div
            class="sc-eCssSg bOnlJe sc-iBPRYJ dOEiXN"
            direction="row"
            spacing=""
            width="100%"
            wrap="nowrap"
          >
            <span
              class="sc-pFZIQ eBEFzI"
              color="#777"
              display="inline-block"
              overflow="visible"
              size="2"
              spacing="0px"
              transform=""
            >
              4 x $4
            </span>
            <span
              class="sc-pFZIQ iisBUL"
              color=""
              display="inline-block"
              overflow="visible"
              size="4"
              spacing="0px"
              transform=""
            >
              $16
            </span>
          </div>
        </div>
      </div>
      <div
        class="sc-eCssSg gnpzZR sc-jSgupP iyBJDZ"
        data-testid="TransactionAndOrderProdItem"
        direction="row"
        spacing="2"
        width="100%"
        wrap="nowrap"
      >
        <a
          data-testid="TransactionAndOrderProdItem-product-link-photo"
        >
          <div
            class="sc-eCssSg cldNiM sc-fubCfw jcXzpB"
            data-testid="ProductThumbnail"
            direction="row"
            height="5"
            spacing=""
            width="5"
            wrap="nowrap"
          >
            <img
              alt="product2"
              data-testid="ProductThumbnail-img"
              src="no-photo.png"
            />
          </div>
        </a>
        <div
          class="sc-gKsewC cREdUd"
        >
          <span
            class="name"
          >
            <a
              data-testid="TransactionAndOrderProdItem-product-link-name"
            >
              product2
            </a>
          </span>
          <div
            class="sc-eCssSg bOnlJe sc-iBPRYJ dOEiXN"
            direction="row"
            spacing=""
            width="100%"
            wrap="nowrap"
          >
            <span
              class="sc-pFZIQ eBEFzI"
              color="#777"
              display="inline-block"
              overflow="visible"
              size="2"
              spacing="0px"
              transform=""
            >
              2 x $6.40
            </span>
            <span
              class="sc-pFZIQ iisBUL"
              color=""
              display="inline-block"
              overflow="visible"
              size="4"
              spacing="0px"
              transform=""
            >
              $12.80
            </span>
          </div>
        </div>
      </div>
      <div
        class="sc-eCssSg fEZMEF"
        direction="row"
        spacing="3"
        width="100%"
        wrap="nowrap"
      >
        <a
          data-testid="OrderList-order-details-link"
        >
          <button
            class="sc-jrAGrp iifaoN"
            color="blue"
            type="button"
          >
            details
          </button>
        </a>
        <div>
          <span
            class="sc-pFZIQ tbjjM"
            color="#777"
            display="inline-block"
            overflow="visible"
            size="3"
            spacing="1px"
            transform=""
          >
            TOTAL
          </span>
          <span
            class="sc-pFZIQ ftfIUZ"
            color=""
            display="inline-block"
            overflow="visible"
            size="5"
            spacing="0px"
            transform=""
          >
            $28.80
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
